refactor: simplify domain and remove temporal coupling